# splot

./: .editorconfig  .env-sample  .gitignore  LICENSE  README.md  pyproject.toml
splot/: cli.py  client.py  db.py  lazy_proxy.py  spotify_api_client.py  util.py
